Fixed up a few styles, and mobile issues (bulma needing overflow-x and no margins on .columns)

--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -19,7 +19,7 @@ $lt-blue-300: saturate(lighten($lt-blue-900, 30%), 60%)
 $lt-blue-200: saturate(lighten($lt-blue-900, 35%), 70%)
 $lt-blue-100: saturate(lighten($lt-blue-900, 40%), 80%)
 
-$dk-gray-900: #262a2f
+$dk-gray-900: #26292a
 $dk-gray-800: saturate(lighten($dk-gray-900, 05%), 2%)
 $dk-gray-700: saturate(lighten($dk-gray-900, 10%), 4%)
 $dk-gray-600: saturate(lighten($dk-gray-900, 15%), 6%)
@@ -39,7 +39,7 @@ $lt-gray-300: saturate(lighten($lt-gray-900, 30%), 12%)
 $lt-gray-200: saturate(lighten($lt-gray-900, 35%), 14%)
 $lt-gray-100: saturate(lighten($lt-gray-900, 40%), 16%)
 
-$lt-red-900: #d02010
+$lt-red-900: #f03f39
 $lt-red-800: saturate(lighten($lt-red-900, 05%), 10%)
 $lt-red-700: saturate(lighten($lt-red-900, 10%), 15%)
 $lt-red-600: saturate(lighten($lt-red-900, 15%), 20%)
@@ -50,10 +50,11 @@ $lt-red-200: saturate(lighten($lt-red-900, 35%), 40%)
 $lt-red-100: saturate(lighten($lt-red-900, 40%), 45%)
 
 $primary: $lt-blue-300
-$link: $dk-blue-400
+$link: $dk-blue-200
 $link-hover: $dk-blue-100
 $link-active: $dk-gray-100
 $link-focus: $dk-gray-100
+$scheme-invert: $dk-blue-700
 $column-gap: 10px
 $family-sans-serif: 'Heebo', sans-serif
 $pagination-color: $link
@@ -61,6 +62,12 @@ $pagination-border-color: $lt-blue-300
 $pagination-hover-border-color: $lt-blue-500
 $pagination-active-border-color: $dk-gray-100
 $dropdown-menu-min-width: 4rem
+$dropdown-content-offset: 0
+$dropdown-content-padding-bottom: 0
+$dropdown-content-padding-top: 0
+$button-border-color: $lt-blue-300
+$button-hover-border-color: $lt-blue-500
+
 
 @import "_bulma.sass" 
 
@@ -69,17 +76,15 @@ $dropdown-menu-min-width: 4rem
 html
   background-color: $lt-blue-100
   padding: 0
-  margin: #{($column-gap * 2)} 0 0 0 // offset for navbar
-  text-rendering: optimizeLegibility
+  margin: #{($column-gap * 1)} 0 0 0 // offset for navbar
 
 body
   font-family: $family-sans-serif
-  color: $dk-gray-800
+  color: $dk-gray-700
   font-size: .9rem
-  line-height: 1.4rem
+  line-height: 1.5
   font-weight: 400
-  *
-    //outline: 1px solid red
+  //overflow-x: hidden
 
 textarea, input, button, select
   font-size: inherit
@@ -113,7 +118,7 @@ h2
   margin: 2rem 0
 
 
-/* Navbar */
+/* Navbar, Dropdowns and Buttons */
 
 .navbar
   background: rgba($dk-blue-900, .95)
@@ -124,8 +129,12 @@ h2
     height: auto
     max-width: 100px
 
-.dropdown button
-  transition: all .3s
+button
+  transition: color .3s, border .6s, background-color .5s
+
+.dropdown-divider
+  margin: 0
+
 /* Layout */
 
 
@@ -134,7 +143,7 @@ h2
   padding: #{($column-gap * 2)} 0 #{($column-gap * 1.5)} #{($column-gap * 5.8)}
   margin: #{($column-gap * 4)} 0 0 0
   cursor: pointer
-  border-bottom: 1px solid $lt-gray-300
+  border-bottom: 1px solid $lt-gray-200
   .pretty_date
     padding-right: .5rem 
   .pretty_day
@@ -142,9 +151,6 @@ h2
 
 .sheet > .day_header:nth-child(2)
   padding-top: 0
-
-.box_nav
-  padding: #{($column-gap * 1)} #{($column-gap * 2)} #{($column-gap * 2)} #{($column-gap * 2)}
 
 .box_sheet
   background-color: $white
@@ -169,10 +175,8 @@ h2
       background-color: darken($lt-blue-200, 2%)
 
 .table_col
-  border-bottom: 1px solid $lt-gray-300
-  border-: 1px solid $lt-gray-200
+  border-bottom: 1px solid $lt-blue-200
   padding: #{($column-gap * 1.5)} 2px 13px 2px
-  vertical-align: top
   &.task_col_1
     padding-left: 60px
     width: 200px
@@ -209,7 +213,7 @@ h2
   &.task_col_4
     width: auto
     padding-right: #{($column-gap * 2)}
-  
+
 .task_duration, .task_value, .task_duration_label
   letter-spacing: -.03em
 .task_duration, .task_project, .task_value, .task_client
@@ -345,7 +349,7 @@ select
 
   body
     font-size: .8rem
-    line-height: 1.3rem
+    line-height: 1.3
   input, select, textarea
     font-size: 1rem // stops ios safari zooming in on inputs and not zooming out when done
   .day_header
@@ -361,7 +365,11 @@ select
     &.task_col_4
       padding-right: #{($column-gap * 1)}
   .box_filters
-    margin: 0 #{($column-gap * 1)} 0 0
+    margin: 0
     padding: 0
-  .box_sheet, .box_nav
+  .box_sheet
     padding: #{($column-gap * 1)} #{($column-gap * 0)} #{($column-gap * 1)} #{($column-gap * 0)}
+
+  .columns
+    margin: 0
+    overflow-x: hidden
